conformance/1.0.0-beta/expected/errors/extra-space-after-pipe.cdx
<ExpectedError category=~syntax reason=~gloss-syn-extra-space-after-pipe/>
